fix modal overflow cutoff issue

--- a/web/assets/picluster-ui.css
+++ b/web/assets/picluster-ui.css
@@ -38,6 +38,7 @@ nav {
   max-width: 100%;
   max-height: 100%;
   background: #565051;
+  z-index: 10;
 }
 
 nav::after {
@@ -239,7 +240,6 @@ textarea {
   height: 100%;
   width:100%;
   position: absolute;
-  z-index: -1;
   overflow-y: scroll;
 }
 
